--- a/app/src/main/res/layout/activity_custom_tabs.xml
+++ b/app/src/main/res/layout/activity_custom_tabs.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,6 +38,7 @@
                     android:layout_gravity="end"
                     android:layout_marginEnd="8dp"
                     android:visibility="gone"
+                    tools:ignore="ContentDescription"
                     />
             </androidx.appcompat.widget.Toolbar>
 
