--- a/app/src/main/res/layout/activity_custom_tabs.xml
+++ b/app/src/main/res/layout/activity_custom_tabs.xml
@@ -52,11 +52,11 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <WebView
+        <net.mm2d.customtabsbrowser.NestedScrollingWebView
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            app:layout_behavior="net.mm2d.customtabsbrowser.NestedScrollingWebView$Behavior"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
