--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,7 +12,8 @@
         tools:ignore="AlwaysShowAction"
         />
     <group
-        android:id="@+id/overflow">
+        android:id="@+id/overflow"
+        >
         <item
             android:id="@+id/action_share"
             android:orderInCategory="200"
