:sparkles: modify popup

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,6 +13,7 @@
         />
     <group
         android:id="@+id/overflow"
+        android:visible="false"
         >
         <item
             android:id="@+id/action_share"
