--- a/app/src/main/res/layout/activity_custom_tabs.xml
+++ b/app/src/main/res/layout/activity_custom_tabs.xml
@@ -60,14 +60,14 @@
             android:elevation="8dp"
             android:orientation="horizontal"
             android:visibility="gone"
-            app:layout_behavior="net.mm2d.customtabsbrowser.BottomBarBehavior"
-            ></LinearLayout>
+            app:layout_behavior="net.mm2d.dev.tabs.browser.BottomBarBehavior"
+            />
 
         <FrameLayout
             android:id="@+id/web_view_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="net.mm2d.customtabsbrowser.NestedScrollingWebView$Behavior"
+            app:layout_behavior="net.mm2d.dev.tabs.browser.NestedScrollingWebView$Behavior"
             />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
@@ -79,5 +79,5 @@
         android:elevation="8dp"
         android:orientation="horizontal"
         android:visibility="gone"
-        ></LinearLayout>
+        />
 </LinearLayout>
